fix test.py bug

--- a/run_fresco_extend.ipynb
+++ b/run_fresco_extend.ipynb
@@ -15,8 +15,9 @@
    "source": [
     "import os\n",
     "\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = \"5\"\n",
-    "os.environ['CUDA_LAUNCH_BLOCKING'] = \"1\"\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '6'\n",
+    "os.environ['CUDA_LAUNCH_BLOCKING'] = '1'\n",
+    "os.environ['HF_ENDPOINT'] = 'https://hf-mirror.com'\n",
     "\n",
     "import cv2\n",
     "import io\n",
@@ -173,7 +174,6 @@
     "    inv_prompts = '/home/linjx/TokenFlow/data/tokenflow_supp_videos/inv_prompts.json'\n",
     "    key_intervs = '/home/linjx/fresco/data/videos/key_interv.json'\n",
     "    video_dir = '/home/linjx/fresco/data/videos'\n",
-    "    base_model_ref = '/home/linjx/fresco/data/videos/base_model.json'\n",
     "\n",
     "    ref_yaml = '/mnt/netdisk/linjunxin/fresco/ref_config.yaml'\n",
     "    refs = '/home/linjx/fresco/cfg.json'\n",
@@ -187,9 +187,6 @@
     "    if use_inv_prompts == True:\n",
     "        with open(inv_prompts, 'r') as f:\n",
     "            inv_pronpts_dict = json.load(f)\n",
-    "\n",
-    "    with open(base_model_ref, 'r') as f:\n",
-    "        model_dict = json.load(f)\n",
     "\n",
     "    with open(refs, 'r') as f:\n",
     "        cfg_dict = json.load(f)\n",
@@ -214,7 +211,7 @@
     "            config_yaml['inv_prompt'] = inv_pronpts_dict[name]\n",
     "        else:\n",
     "            config_yaml['inv_prompt'] = ''\n",
-    "        config_yaml['sd_path'] = model_dict[name]\n",
+    "        config_yaml['sd_path'] = 'stabilityai/stable-diffusion-2-1-base'\n",
     "        config_yaml['inv_batch_size'] = inv_batch_size\n",
     "        config_yaml['run_ebsynth'] = run_ebsynth\n",
     "        config_yaml['batch_size'] = batch_size\n",
@@ -232,6 +229,7 @@
     "            config_yaml['num_warmup_steps'] = int(config_yaml['num_inference_steps'] * cfg_dict[file_name]['strength'])\n",
     "            config_yaml['a_prompt'] = cfg_dict[file_name]['a_prompt']\n",
     "            config_yaml['n_prompt'] = cfg_dict[file_name]['n_prompt']\n",
+    "            config_yaml['sd_path'] = cfg_dict[file_name]['model']\n",
     "        if use_inv_prompts == True:\n",
     "            inv_path_name = 'latents'\n",
     "        else:\n",
@@ -289,7 +287,7 @@
     "inputs = ['music_input', ]\n",
     "configs = make_configs(inputs=inputs, edit_method='SDEdit', synth_method='Tokenflow',\n",
     "                       use_warp_noise=False, run_ebsynth=False, use_saliency=True,\n",
-    "                       use_controlnet=True, keyframe_select_mode='loop', keyframe_select_radix=6)\n",
+    "                       use_controlnet=True, keyframe_select_mode='fixed', keyframe_select_radix=6)\n",
     "print(configs)"
    ]
   },
